<resources>
    <string name="app_name">Pit Spot</string>
    <string name="tab_text_1">Locator</string>
    <string name="tab_text_2">complain</string>
    <string name="tab_text_3">reports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="click_here_to_register">Click Here To Register</string>
    <string name="click_here_to_login">Click Here To Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag"></string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
</resources>