<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Login">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="-33dp"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailId"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="00dp"
        android:text="@string/tag"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/password"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/et_custom"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/number"
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Number"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="number"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/otpbox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/number"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:visibility="gone"
        android:hint="Enter OTP"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_below="@id/otpbox"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/submitdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/bl"
        android:bottomLeftRadius="5dp"
        android:bottomRightRadius="5dp"
        android:text="SUBMIT"
        android:textColor="@android:color/white"
        android:textColorHighlight="#56B6C3"
        android:topLeftRadius="5dp"
        android:topRightRadius="5dp" />

    <Button
        android:id="@+id/verifyotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitdetails"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/bl"
        android:bottomLeftRadius="5dp"
        android:bottomRightRadius="5dp"
        android:text="VERIFY OTP"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textColorHighlight="#56B6C3"
        android:topLeftRadius="5dp"
        android:topRightRadius="5dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifyotp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/bl"
        android:bottomLeftRadius="5dp"
        android:bottomRightRadius="5dp"
        android:text="@string/register"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textColorHighlight="#56B6C3"
        android:topLeftRadius="5dp"
        android:topRightRadius="5dp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/loginpage"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/loginpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/click_here_to_login"
        android:textSize="15sp" />

</RelativeLayout>